@@ -1,4 +1,5 @@
 
+10/10/2007	frmb	more work on traces analysis
 29/09/2007	frmb	added skeleton for traces and mobility checking
 27/09/2007	frmb	various updates
 11/06/2007	frmb	more work on TIMER handling
